--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 /* My Styles */
-@import url('css/zodiak.css');
+@import url('css\zodiak.css');
 
 body {
-    background-image: url("assets/background.jpg");
+    background-image: url("assets\background.jpg");
     background-size: cover;
     height: 100vh;
     
@@ -10,7 +10,9 @@ body {
 
 main {
     max-width: 75%;
-    background-color: black;
+    background-color: rgba(255, 255, 255, 0.5);
+    
+    border-radius: 15px;
 }
 
 h1 h2 {
@@ -22,4 +24,9 @@ a {
     display: block;
 }
 
+img {
+    display: block;
+    height: 200px;
+    margin: auto;
+}
 
