--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 /* My Styles */
-@import url('css\zodiak.css');
+@import url('css/styles.css');
 
 body {
-    background-image: url("background.jpg");
+    background-image: url("akira-hojo-ZxGdri2EWzk-unsplash.jpg");
     background-size: cover;
-    /* height: 100vh; */
+    height: 100vh;
     margin: 30px;
     
 }
@@ -30,7 +30,7 @@ a {
 
 img {
     display: block;
-    height: 200px;
-    margin: auto;
+    width: 200px;
+    margin: 15px auto;
 }
 
