troubleshooting background image

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,10 @@
 @import url('css/styles.css');
 
 body {
-    background-image: url("akira-hojo-ZxGdri2EWzk-unsplash.jpg");
+    background-image: url("background.jpg");
     background-size: cover;
     height: 100vh;
     margin: 30px;
-    
 }
 
 main {
