--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,8 @@
 @import url('css/styles.css');
 
 body {
-    background-image: url("background.jpg");
+    background: rgb(207,23,6);
+    background: linear-gradient(to bottom right, rgba(207,23,6,1) 0%, rgba(252,176,69,1) 50%, rgba(255,255,168,1) 100%);
     background-size: cover;
     height: 100vh;
     margin: 30px;
@@ -24,7 +25,17 @@ h1 {
 
 a {
     display: block;
-    margin: 7px auto;
+    margin: 10px auto;
+    width: 100%;
+    height: 30px;
+    border-radius: 20px;
+    background-color: rgba(255, 255, 255, 0.5); 
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    background-color: rgba(255, 255, 255, 0.75);
 }
 
 img {
@@ -32,4 +43,3 @@ img {
     width: 200px;
     margin: 15px auto;
 }
-
