--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,8 @@
 body {
     background: rgb(207,23,6);
     background: linear-gradient(to bottom right, rgba(207,23,6,1) 0%, rgba(252,176,69,1) 50%, rgba(255,255,168,1) 100%);
-    background-size: cover;
+    background-size: auto;
+    background-repeat: no-repeat;
     height: 100vh;
     margin: 30px;
 }
@@ -42,4 +43,10 @@ img {
     display: block;
     width: 200px;
     margin: 15px auto;
+}
+
+@media (max-width: 600px) {
+    main {
+        max-width: 90%;
+    }
 }
