trying to solve font issue
the font isn't linking properly in css. When I go to open the Zodiak css file I've imported into styles.css, I get an error message saying Cannot Open File

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 /* My Styles */
-@import url('css/styles.css');
+@import url('css\zodiak.css');
 
 body {
     background: rgb(207,23,6);
@@ -8,6 +8,7 @@ body {
     background-repeat: no-repeat;
     height: 100vh;
     margin: 30px;
+    display: flex;
 }
 
 main {
@@ -20,6 +21,13 @@ main {
 h1 {
     font-family: 'Zodiak-Light';
     font-size: 48px;
+    display: block;
+    margin: auto;
+}
+
+h2 {
+    font-family: 'Zodiak-Light';
+    font-size: 32px;
     display: block;
     margin: auto;
 }
