Remove unused font from import link

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /* My Styles */
-@import url('https://fonts.googleapis.com/css2?family=Italianno&family=Merriweather&family=Raleway:wght@300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Italianno&family=Merriweather:wght@300;400&display=swap');
 
 body {
     height: 100vh;
